CSS/style.css
html {
    height: 100%;
    width: 100%;
  }
  .sidebar-wrap {
    width: 60px;
    height: 100vh;
    background-color: #000;
    color: #fff;
    padding: 10px;
    transition: 0.8s;
  }
  .sidebar-wrap:hover {
    width: 280px;
  }
  .sidebar-wrap:hover .logo-wrap span {
    display: flex;
  }
  .sidebar-wrap:hover .nav li .nav-link span {
    display: flex;
  }
  .sidebar-wrap:hover .dropdown-wrap strong {
    display: flex;
  }
  .sidebar-wrap:hover .dropdown-wrap::after {
    display: inline-block;
  }
  .sidebar-wrap:hover .dropdown-wrap {
    justify-content: flex-start;
  }
  .sidebar-wrap .logo-wrap {
    color: #fff;
    font-size: 35px;
    display: flex;
    align-items: center;
    gap: 10px;
  }
  .sidebar-wrap .logo-wrap span {
    font-size: 18px;
  }
  .sidebar-wrap .logo-wrap .icon-wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    min-width: 40px;
  }
  .sidebar-wrap .nav {
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    flex-wrap: nowrap;
  }
  .sidebar-wrap .nav::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 5px;
    background-color: #f5f5f5;
  }
  .sidebar-wrap .nav::-webkit-scrollbar {
    width: 5px;
    background-color: #f5f5f5;
    border-radius: 5px;
  }
  .sidebar-wrap .nav::-webkit-scrollbar-thumb {
    border-radius: 5px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    background-color: #9b9b9b;
  }
  .sidebar-wrap .nav li {
    margin-top: 5px;
  }
  .sidebar-wrap .nav li .nav-link {
    color: #fff;
    padding: 0;
    font-size: 20px;
    display: flex;
    align-items: center;
    gap: 5px;
  }
  .sidebar-wrap .nav li .nav-link .icon-wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    min-width: 40px;
  }
  .sidebar-wrap .nav li .nav-link span {
    font-size: 16px;
  }
  .sidebar-wrap .nav li .nav-link.active {
    background-color: #ffa200;
  }
  .sidebar-wrap .nav li .nav-link:hover {
    background-color: #ffa200;
  }
 
  p {
    display: inline-block;
       font-weight: bold;
   }
   p:hover {
     color: #ffa200;
   }
   #msgDiv {
     position: absolute;
     top: 50%;
     width: 100%;
     text-align: center;
     font-size: 50px;
   }
  

